# shizu

./: CMakeLists.txt  README.md
clients/console/executable/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/pipe/: CMakeLists.txt
servers/console-control/executable/: CMakeLists.txt
servers/console-control/executable/sources/Shizu/Server/Console/: Main.c
servers/console/executable/: CMakeLists.txt
servers/console/executable/sources/Shizu/Server/Console/: Main.c
website/: index.html
